[package]
name = "latency-book-example"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-rt = "2.11.0"
actix-web = "4.13.0"
anyhow = "1.0.102"
mobc = "0.9.0"
mobc-postgres = "0.9.0"
openssl = "0.10.80"
postgres-openssl = "0.5.3"
proc-macro2 = "1.0.106"
time = "0.3.47"
tokio = { version = "1.52.3", features = ["full"] }
tokio-postgres = "0.7.17"
