[package]
name = "fibonacci"
version = "0.0.0"
edition = "2024"

[dev-dependencies]
# pprof only works with Criterion v0.5
criterion = { version = "0.5", features = [
  "html_reports",
  "async",
  "async_futures",
] }
pprof = { version = "0.15.0", features = ["criterion", "flamegraph"] }

[[bench]]
name = "benchmark_pprof"
harness = false
