[package]
name = "sequential-vs-concurrent"
version = "0.0.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.5", features = [
  "html_reports",
  "async",
  "async_futures",
] }
pprof = { version = "0.15.0", features = ["criterion", "flamegraph"] }
futures = "0.3"
tokio = { version = "1.52", features = ["rt", "time", "rt-multi-thread"] }

[[bench]]
name = "benchmark"
harness = false

[dependencies]
tokio = "1.52.3"
